tests/parser/return-statement-not-terminated.lox
fn f() { return 5 _ }
